# solana_sandbox

./: .gitignore  pyproject.toml  solana_tools.sh
dapps/: .clang-format  makefile
dapps/src/helloworld/: helloworld.c  helloworld.py  test_helloworld.c
dapps/src/samples/: account.h  instruction.cc  instruction.h  samples.cc  samples.py
wallets/: wallet_1.json  wallet_2.json
